# geojson-rewind

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  run_tests.py  setup.py
.github/workflows/: publish.yml  test.yml
geojson_rewind/: __init__.py  __version__.py  rewind.py
tests/: tests.py
tests/fixtures/: both_reversed.input.geojson  both_reversed.output.geojson  empty.output.geojson  featurecollection.output.geojson  geomcollection.input.geojson  geomcollection.output.geojson  inner_reversed.input.geojson  passthrough.input.geojson  point_crs84.input.geojson  point_no_crs.input.geojson  point_other_crs.input.geojson
