[tool.poetry]
name = "geojson-rewind"
version = "1.1.0"
description = "A Python library for enforcing polygon ring winding order in GeoJSON"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/geojson-rewind"
homepage = "https://github.com/chris48s/geojson-rewind"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
coverage = "^7.5"
isort = "^5.13"
flake8 = { version = "^7.0.0", python = "^3.8.1" }
black = "==24.4.2"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rewind = 'geojson_rewind.rewind:main'
