[project]
name = "geojson-rewind"
version = "1.1.0"
description = "A Python library for enforcing polygon ring winding order in GeoJSON"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.group.dev.dependencies]
coverage = "7.11.0"
isort = "5.13.2"
flake8 = "7.1.2"
black = "24.8.0"

[project.urls]
Home = "https://github.com/chris48s/geojson-rewind"
Source = "https://github.com/chris48s/geojson-rewind"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.masonry.api"

[project.scripts]
rewind = 'geojson_rewind.rewind:main'
