[project]
name = "geojson-rewind"
version = "1.2.1"
description = "A Python library for enforcing polygon ring winding order in GeoJSON"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.group.dev.dependencies]
coverage = "7.11.0"
isort = "7.0.0"
flake8 = "7.3.0"
black = "25.9.0"

[project.urls]
Home = "https://github.com/chris48s/geojson-rewind"
Source = "https://github.com/chris48s/geojson-rewind"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
rewind = 'geojson_rewind.rewind:main'
